# projectX

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
demo_app/: CMakeLists.txt
demo_app/assets/scenes/: scene1.json
demo_app/assets/shaders/: fs_sprite.sc  vs_sprite.sc
demo_app/components/: Rotator.h  RotatorComp.h
demo_app/src/: main.cpp  scene1.json
engine/: CMakeLists.txt
engine/common/: Logger.h  common_include.h  constants.h  typedefs.h
engine/components/: Camera.cpp  Camera.h  QuadRenderer.cpp  QuadRenderer.h  RotatorComp.cpp  RotatorComp.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
engine/data/shaders/: build_shader.txt  fs_quad.sc  vs_quad.sc
engine/editor/: ComponentDrawer.cpp  Inspector.h  InspectorMetadata.h  InspectorRenderer.cpp  InspectorRenderer.h
engine/include/: Component.h  Engine.h  GameObject.h  GameObject.inl  Inspector.h  Logger.h  constants.h  engine.h
engine/include/common/: common_include.h  constants.h  runtime_context.h  typedefs.h
engine/include/common/utils/: bgfx_utils.h  file_utils.h
engine/include/components/: QuadRenderer.h  Transform.h
engine/include/utils/: bgfx_utils.h  file_utils.h
engine/main/: Component.h  ComponentBase.h  ComponentFactory.cpp  ComponentFactory.h  ComponentList.h  ComponentTypes.h  Engine.h  GameObject.cpp  GameObject.h  GameObject.inl  GameObjectFactory.cpp  GameObjectFactory.h  Metadata.h  SceneLoader.cpp  SceneLoader.h
engine/misc/utils/: bgfx_utils.h
engine/src/: Engine.cpp  GameObject.cpp  engine.cpp
engine/src/components/: QuadRenderer.cpp
engine/utils/: bgfx_utils.h  file_utils.h
scripts/: build_shader.txt
test_code/: CMakeLists.txt
test_code/bgfx_quad/: CMakeLists.txt  build_shader.txt  main.cpp
test_code/test_nlohman_json/: CMakeLists.txt  main.cpp
test_code/test_x_macro/: CMakeLists.txt  main.cpp
